# scada-ui-kit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build_package.py  bump_version.py  main_dashboard.py  publish.py  pyproject.toml  scada_chart.py  scada_gauge.py  scada_matrix.py  scada_toggle.py
.github/workflows/: ci.yml
scada_ui_kit/: __init__.py  scada_widgets.py
tests/: conftest.py  test_widgets.py
